Add simple search

--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -5,9 +5,9 @@
 
 {% block content %}
 
-<h2 class="lower">Sponsor Registration</h2>
+<h2 class="lower">Coach Registration</h2>
 <p>
-    Welcome to the 3rd annual MBMT, held on April 1st, 2017!
+    Welcome to the {{ competition.year }} annual MBMT, held on {{ competition.date }}!
     We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 </p>
 
