--- a/coaches/templates/coaches/school.html
+++ b/coaches/templates/coaches/school.html
@@ -1,3 +1,27 @@
 {% extends "shared/base.html" %}
+{% load static %}
 
-Choose a school
+{% block head %}
+<script type="text/javascript" src="{% static "js/middle.js" %}"></script>
+<script type="text/javascript" src="{% static "js/bootstrap-select.min.js" %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-select.min.css" %}">
+{% endblock %}
+
+{% block content %}
+
+<h1>School Registration</h1>
+<p>
+    Please select the school you will be coaching for {{ competition.name }}.
+    Only one coach is permitted per school.
+</p>
+<form name="school">
+    <div class="form-group">
+        <select id="schools" class="form-control selectpicker" data-live-search="true">
+            {% for school in schools %}
+            <option>{{ school }}</option>
+            {% endfor %}
+        </select>
+    </div>
+</form>
+
+{% endblock %}
