--- a/coaches/templates/coaches/school.html
+++ b/coaches/templates/coaches/school.html
@@ -14,9 +14,14 @@
     Please select the school you will be coaching for {{ competition.name }}.
     Only one coach is permitted per school.
 </p>
+{% if existing %}
+<p class="red">
+    A coach <strong>{{ existing.get_full_name }}</strong> has already registered for <strong>{{ school.name }}!</strong> If
+    you think this is a mistake, please contact the competition runners.
+</p>
+{% endif %}
 <form name="school" method="post" action="{% url "coaches:school" %}">
     {% csrf_token %}
-    {{ form.errors }}
     <div class="form-group">
         <select id="schools" name="school" class="form-control selectpicker" data-live-search="true" title="Choose one of the following...">
             <option value="other">My school isn't listed</option>
