--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -33,8 +33,14 @@
                         {% endblock %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li><span class="navbar-text">{{ request.user.get_full_name }}</span></li>
                         {% block shortcuts %}
                         {% if user.is_authenticated %}
+                        {% if user.is_staff %}
+
+                        {% else %}
+                        <li><a href="{% url "coaches:index" %}">Coaching</a></li>
+                        {% endif %}
                         <li><a href="{% url "home:logout" %}">Logout</a></li>
                         {% else %}
                         <li><a href="{% url "coaches:register" %}">Register</a></li>
