--- a/home/static/css/master.css
+++ b/home/static/css/master.css
@@ -71,7 +71,7 @@ input[type="text"] {
   font-size: 20px;
 }
 
-.fullname {
+.under {
   margin-top: -8px;
   margin-bottom: 20px;
   font-size: 20px;
