--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block head %}
+<script type="text/javascript" src="{% static "js/validator.min.js" %}"></script>
+{% endblock %}
+
 
 {% block content %}
 
