--- a/coaches/templates/coaches/schools.html
+++ b/coaches/templates/coaches/schools.html
@@ -13,6 +13,7 @@
 <p>
     Please select the school you will be coaching for {{ competition.name }}.
     Only one coach is permitted per school.
+    If searching does not yield the name of your school or organization, clear the search and select the first option (My school isn't listed) and fill in the official name of your school.
 </p>
 {% if existing %}
 <p class="red">
