Cleanup, perhaps a less cluttered approach to team editing is in order?

--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -20,7 +20,7 @@
     {% crispy form %}
     <div class="button-group bump-down">
         <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
-        <a id="cancel" class="btn btn-link right" href="{% url "home:index" %}">Cancel</a>
+        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '{% url "home:index" %}';"/>
     </div>
 </form>
 {% else %}
