--- a/coaches/templates/coaches/team.html
+++ b/coaches/templates/coaches/team.html
@@ -13,7 +13,7 @@
 
 <h2>Team Editor</h2>
 
-For a complete explanation regarding what team compositions are allowed, see the <a href="{% url "home:rules" %}" target="_blank">Rules</a>.
+For a complete explanation regarding what team compositions are allowed, see the <a href="{% url "home:rules" %}" target="_blank">rules</a>.
 
 {% if student_forms.non_form_errors %}
 <br/><br/>
@@ -21,25 +21,31 @@ For a complete explanation regarding what team compositions are allowed, see the
 {% endif %}
 
 <form name="registration" data-toggle="validator" role="form" method="post">
-    <div class="form-group fancy-group">
+    {% csrf_token %}
+    <div class="form-group fancy-group team-form">
         <div class="team-name">{{ team_form.name|as_crispy_field }}</div>
         <div class="team-division">{{ team_form.division|as_crispy_field }}</div>
     </div>
+    {{ student_forms.management_form }}
     {% for student_form in student_forms %}
-    <h3>Student {{ forloop.counter }}</h3>
-    <div class="form-group fancy-group columns-2">
-        <div class="student-first-name">{{ student_form.first_name|as_crispy_field }}</div>
-        <div class="student-last-name">{{ student_form.last_name|as_crispy_field }}</div>
-    </div>
-    <div class="form-group fancy-group">
-        <div class="student-subject1">{{ student_form.subject1|as_crispy_field }}</div>
-        <div class="student-subject2">{{ student_form.subject2|as_crispy_field }}</div>
-        <div class="student-shirt-size">{{ student_form.shirt_size|as_crispy_field }}</div>
+    <div class="student-form">
+        <h3>Student {{ forloop.counter }}</h3>
+        <div class="form-group fancy-group columns-2">
+            <div class="student-first-name">{{ student_form.first_name|as_crispy_field }}</div>
+            <div class="student-last-name">{{ student_form.last_name|as_crispy_field }}</div>
+        </div>
+        <div class="form-group fancy-group columns-2">
+            <div class="student-subjects fancy-group columns-2">
+                <div class="student-subject1">{{ student_form.subject1|as_crispy_field }}</div>
+                <div class="student-subject2">{{ student_form.subject2|as_crispy_field }}</div>
+            </div>
+            <div class="student-shirt-size">{{ student_form.shirt_size|as_crispy_field }}</div>
+        </div>
     </div>
     {% endfor %}
     <div class="form-group">
-        <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
-        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = {% url "coaches:index" %};"/>
+        <input id="submit" type="submit" value="Save" class="btn btn-primary right"/>
+        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '{% url "coaches:index" %}';"/>
     </div>
 </form>
 
