--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -10,9 +10,9 @@
     {% csrf_token %}
     <script src="{% static "js/validator.min.js" %}"></script>
     {% crispy form %}
-    <div class="form-group">
+    <div class="button-group bump-down">
         <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
-        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = {% url "home:index" %};"/>
+        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '{% url "home:index" %}';"/>
     </div>
 </form>
 
