--- a/coaches/templates/coaches/index.html
+++ b/coaches/templates/coaches/index.html
@@ -26,7 +26,7 @@
 
 <h2>Teams</h2>
 <table id="teams" class="table">
-    <tr><th>Name</th><th>Students</th><th>Grade</th><th>Subject Tests</th><th>Shirt Sizes</th></tr>
+    <tr><th>Name</th><th>Students</th><th>Subject Tests</th><th>Shirt Sizes</th></tr>
     {% for team in school.current_teams %}
     <tr>
         <td>
@@ -45,7 +45,7 @@
         <td>
             <ul>
                 {% for student in team.students.all %}
-                <li>{{ student.name }}</li>
+                <li>{{ student.full_name }}</li>
                 {% endfor %}
             </ul>
         </td>
@@ -59,7 +59,7 @@
         <td>
             <ul>
                 {% for student in team.students.all %}
-                <li>{{ student.get_size_display }}</li>
+                <li>{{ student.get_shirt_size_display }}</li>
                 {% endfor %}
             </ul>
         </td>
