--- a/coaches/templates/coaches/index.html
+++ b/coaches/templates/coaches/index.html
@@ -36,10 +36,10 @@
             {% else %}
                 <br>{{ team.get_division_display|capfirst }}
             {% endif %}
-            {% if allow_add_teams %}
+            {% if competition.can_edit_teams %}
             <br>
-            <a href="{% url "coaches:edit_team" team.id %}">Edit</a> |
-            <a href="{% url "coaches:remove_team" team.id %}">Remove</a>
+            <a href="{% url "coaches:teams_edit" team.id %}">Edit</a> |
+            <a href="{% url "coaches:teams_remove" team.id %}">Remove</a>
             {% endif %}
         </td>
         <td>
