--- a/home/static/css/master.css
+++ b/home/static/css/master.css
@@ -289,6 +289,11 @@ table#teams, table#chaperones {
   margin-top: 1em;
 }
 
+table#chaperones td:last-child {
+  width: 1%;
+  white-space: nowrap;
+}
+
 table#teams ul {
   margin-bottom: 0;
   padding-left: 0;
