--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -31,9 +31,26 @@
 {% endif %}
 
 <h3>Contest</h3>
-<p>MBMT consists of four rounds: the Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, or Number Theory), the Team Round, the Guts Round, and the Fun Round. Please note that there is no Sprint Round this year. Each Subject Test consists of eight questions on one subject and lasts thirty minutes. The Team Round contains fifteen questions for all team members to collaboratively solve in forty-five minutes. The Guts Round (something many middle school students have not seen before), an hour long round, is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set. Finally, the Fun Round is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round. All of the rounds, except for the Fun Round, will be split by division.</p>
-<p>Based on reflections made after last year’s tournament, we have recalibrated the accessibility and difficulty of problems in both divisions. Our guiding philosophy is that every participant in MBMT should have a shot at winning, while still being challenged at the highest level.</p>
-<p>Individual and team winners in each division will receive trophies or medals! Team scores are calculated using Team and Guts round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win. The individual awards are for high-scoring individuals in each subject test and overall, combining the subject test scores. There are also additional awards for high performance on the Guts round. Finally, we also provide the Eric Walstein Award to the highest-scoring 6th grade student.</p>
+<p>
+    MBMT consists of four rounds: the Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, or Number Theory), the Team Round, the Guts Round, and the Fun Round.
+    Please note that there is no Sprint Round this year.
+    Each Subject Test consists of eight questions on one subject and lasts thirty minutes.
+    The Team Round contains fifteen questions for all team members to collaboratively solve in forty-five minutes.
+    The Guts Round (something many middle school students have not seen before), an hour long round, is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set.
+    Finally, the Fun Round is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.
+    All of the rounds, except for the Fun Round, will be split by division.
+</p>
+<p>
+    Based on reflections made after last year’s tournament, we have recalibrated the accessibility and difficulty of problems in both divisions.
+    Our guiding philosophy is that every participant in MBMT should have a shot at winning, while still being challenged at the highest level.
+</p>
+<p>
+    Individual and team winners in each division will receive trophies or medals!
+    Team scores are calculated using Team and Guts round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win.
+    The individual awards are for high-scoring individuals in each subject test and overall, combining the subject test scores.
+    There are also additional awards for high performance on the Guts round.
+    Finally, we also provide an Award to the highest-scoring 6th grade student.
+</p>
 
 {% if competition %}
 <h3>Schedule</h3>
