Fixed missing names

--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 class="lowererer">Sponsor Login</h2>
+<h2 class="lowererer">Login</h2>
 
 <form name="registration" data-toggle="validator" role="form" method="post">
     {% csrf_token %}
