--- a/grading/templates/grading/team/view.html
+++ b/grading/templates/grading/team/view.html
@@ -1,4 +1,4 @@
-{% extends "home/../../../../home/templates/shared/base.html" %}
+{% extends "shared/base.html" %}
 {% load staticfiles %}
 {% load grading_status %}
 
