Add rudimentary team view

--- a/coaches/templates/coaches/index.html
+++ b/coaches/templates/coaches/index.html
@@ -52,7 +52,7 @@
         <td>
             <ul>
                 {% for student in team.students.all %}
-                <li>{{ student.full_name }}, {{ student.get_grade_display }}</li>
+                <li>{{ student.get_full_name }}, {{ student.get_grade_display }}</li>
                 {% endfor %}
             </ul>
         </td>
