--- a/grading/templates/grading/index.html
+++ b/grading/templates/grading/index.html
@@ -8,8 +8,8 @@
 <table id="chaperones" class="table">
     <tr><th>School</th><th>Coach</th><th>Teams</th><th>Chaperones</th></tr>
     {% for map in coaching %}
-    {% with map.teams as teams %}
     {% with map.chaperones as chaperones %}
+    {% with map.teams as teams %}
     <tr>
         <td>
             {{ map.school.name|default_if_none:"None selected" }}<br>
@@ -26,17 +26,17 @@
         {% empty %}
             No teams!
         {% endfor %}
-        {% endwith %}
         </td>
         <td>
         {% for chaperone in chaperones %}
-            <span class="newline">{{ chaperone.name }}</span>
+            <span class="newline">{{ chaperone.get_full_name }}</span>
         {% empty %}
             No chaperones!
         {% endfor %}
-        {% endwith %}
         </td>
     </tr>
+    {% endwith %}
+    {% endwith %}
     {% endfor %}
 </table>
 
