Fix URL, add shirt sizes

--- a/grading/templates/grading/index.html
+++ b/grading/templates/grading/index.html
@@ -5,14 +5,14 @@
 <h1>Overview</h1>
 
 <h2>Schools</h2>
-<table id="chaperones" class="table">
+<table id="chaperones" class="table table-striped">
     <tr><th>School</th><th>Coach</th><th>Teams</th><th>Chaperones</th></tr>
     {% for map in coaching %}
     <tr>
         <td>{{ map.school.name }}</td>
         <td>{{ map.coach.get_full_name }}</td>
-        <td>{{ map.teams|length }} total</td>
-        <td>{{ map.chaperones|length }} total</td>
+        <td>{{ map.teams|length }}</td>
+        <td>{{ map.chaperones|length }}</td>
     </tr>
     {% endfor %}
 </table>
